kubernetes-manifests-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  # Leaving host out, so ALL webtraffic is routed to app
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: frontend
            port: 
              number: 80
